force-app/main/default/objects/Project__c/fields/Days_Sprint__c.field-meta.xml
<CustomField>
    <fullName>Days_Sprint__c</fullName>
    <description>Number of days involved in a single sprint.</description>
    <inlineHelpText>Number of days involved in a single sprint.</inlineHelpText>
    <label>Days In Sprint</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>