force-app/main/default/objects/Project__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A short description on the aim of the project.</description>
    <inlineHelpText>A short description on the aim of the project.</inlineHelpText>
    <label>Project Description</label>
    <type>TextArea</type>
</CustomField>