force-app/main/default/objects/Project__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>The time period of the project.</description>
    <inlineHelpText>The time period of the project.</inlineHelpText>
    <label>Project Duration</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>