force-app/main/default/objects/Project__c/fields/Employee_Count__c.field-meta.xml
<CustomField>
    <fullName>Employee_Count__c</fullName>
    <description>Estimated number of employees required for the project.</description>
    <inlineHelpText>Estimated number of employees required for the project.</inlineHelpText>
    <label>Employees Required</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>