force-app/main/default/objects/Project__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The expected end date of the project.</description>
    <formula>IF( ISPICKVAL( Project_Type__c , &quot;Waterfall&quot;) ,  Start_Date__c + Duration__c , Start_Date__c +( Sprint_Count__c * Days_Sprint__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The expected end date of the project.</inlineHelpText>
    <label>Project End Date</label>
    <type>Date</type>
</CustomField>