force-app/main/default/objects/Project__c/fields/Project_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Project_Revenue__c</fullName>
    <description>The Revenue Expected Out Of This Project. Calculated with related opportunity amount</description>
    <formula>Related_Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Revenue Expected Out Of This Project. Calculated with related opportunity amount</inlineHelpText>
    <label>Project Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>