force-app/main/default/objects/Project__c/fields/Sprint_Count__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Count__c</fullName>
    <description>Number of sprints required in case the project is a agile type project</description>
    <inlineHelpText>Number of sprints required in case the project is a agile type project</inlineHelpText>
    <label>Number Of Sprints</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>