force-app/main/default/objects/Project__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <defaultValue>TODAY() +30</defaultValue>
    <description>The start date of the project</description>
    <inlineHelpText>The start date of the project</inlineHelpText>
    <label>Project Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>